Fixed alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,10 +38,12 @@ h2 {
 
 body {
     display: flex;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     overflow-x: hidden;
-    margin: 0;    
+    margin: 0;
+    flex-flow: wrap;
+    overflow-x: hidden;    
 }
 
 #sidebar {
@@ -205,6 +207,7 @@ label {
     body {
         flex-direction: column;
         width: 100%;
+        align-items: center;
     }
     
     #sidebar {
@@ -215,7 +218,7 @@ label {
         align-items: center;
         justify-content: center;
         position: fixed;
-        padding: 10px;
+        padding: 1em 0;
     }
 
     div #navtext {
@@ -254,9 +257,12 @@ label {
 
     #main-content {
         margin-top: 147px;
-        justify-content: center;
-        width: 100%;
         margin-left: 0;
+        padding: 1em 0;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-width: 100%
     }
 
     h1 {
